<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/my_profile" />


        <item
            android:id="@+id/favouriteres"
            android:icon="@drawable/fav"
            android:title="@string/favorites" />

        <item
            android:id="@+id/historyorder"
            android:icon="@drawable/history"
            android:title="@string/order_history" />

        <item
            android:id="@+id/faq"
            android:icon="@drawable/question"
            android:title="@string/faqs" />

        <item
            android:id="@+id/logout"
            android:icon="@drawable/log"
            android:title="@string/logout" />
    </group>

</menu>

